# Jenjin

./: .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md  imgui.ini  jenjin.d.tl  jenpak.sh  test.lua  tlconfig.lua  vcpkg.json  windows.sh
.github/workflows/: build.yml
asteroids_test/: main.jenscene  run.sh
asteroids_test/scripts/: asteroids.lua  gun.lua  movement.lua
editor/: CMakeLists.txt
editor/include/: editor.h  state.h  utils.h  window.h  zepwrapper.h
editor/src/: dockspace.cpp  editor.cpp  explorer.cpp  main.cpp  menubar.cpp  state.cpp  utils.cpp  viewport.cpp  window.cpp  zepwrapper.cpp
engine/: CMakeLists.txt
engine/include/: camera.h  engine.h  framebuffer.h  gameobject.h  lua.h  luamanager.h  mesh.h  scene.h  scriptmanager.h  shader.h  shapes.h  state.h  texture.h  transform.h  utils.h  window.h
engine/include/components/: mesh.h  transform.h
engine/include/jenjin/: camera.h  engine.h  framebuffer.h  gameobject.h  helpers.h  luamanager.h  mesh.h  scene.h  shader.h  target.h  texture.h
engine/include/jenjin/editor/: editor.h  state.h  utils.h  widgets.h
engine/include/jenjin/targets/: default.h  editor.h  runtime.h
engine/shaders/: fragment.glsl  fshader.glsl  vertex.glsl  vshader.glsl
engine/src/: camera.cpp  engine.cpp  framebuffer.cpp  gameobject.cpp  helpers.cpp  lua.cpp  luamanager.cpp  scene.cpp  scriptmanager.cpp  shader.cpp  shapes.cpp  state.cpp  texture.cpp  utils.cpp  window.cpp
engine/src/editor/: editor.cpp  utils.cpp  widgets.cpp
engine/src/targets/: default.cpp  editor.cpp  runtime.cpp
jenjin/: CMakeLists.txt
jenjin/src/: main.cpp
pong/: CMakeLists.txt
pong/scripts/: ball.lua  ball.tl  fps.lua  fps.tl  menu.lua  menu.tl  opponent.lua  opponent.tl  paddle.lua  paddle.tl  utils.lua  utils.tl
pong/src/: main.cpp
resources/shaders/: default_frag.glsl  default_vert.glsl
shaders/: default_frag.glsl  default_vert.glsl
test/: CMakeLists.txt
test/assets/: LICENSE.txt
test/include/: display.h  mydisplay.h
test/src/: display.cpp  main.cpp  mydisplay.cpp
wave_defense/: CMakeLists.txt
wave_defense/scripts/: fps.lua  fps.tl  look.lua  look.tl  move.lua  move.tl  shoot.lua  shoot.tl  transpile.sh
wave_defense/src/: main.cpp
